--- a/views/admin/adminViewProductDetails.ejs
+++ b/views/admin/adminViewProductDetails.ejs
@@ -42,8 +42,9 @@
                   <h4 class="text-dark d-flex justify-content-center align-items-center mt-4"> CATEGORY ID</h4>
               </div>
               <div class="d-flex justify-content-center">
-                  <p><%= product.category%>
+                  <p><%= product.category.name%> 
                   </p>
+                  <p> </p>
               </div>
               </div>
               
