--- a/views/users/productDetails.ejs
+++ b/views/users/productDetails.ejs
@@ -69,11 +69,11 @@
 						<!--  -->
 						<div class="p-t-33">
 							<div class="flex-w flex-r-m p-b-10">
-								<div class="size-203 flex-c-m respon6">
+								<!-- <div class="size-203 flex-c-m respon6">
 									Size
-								</div>
+								</div> -->
 
-								<div class="size-204 respon6-next">
+								<!-- <div class="size-204 respon6-next">
 									<div class="rs1-select2 bor8 bg0">
 										<select class="js-select2" name="time">
 											<option>Choose an option</option>
@@ -84,7 +84,7 @@
 										</select>
 										<div class="dropDownSelect2"></div>
 									</div>
-								</div>
+								</div> -->
 							</div>
 
 							<!-- <div class="flex-w flex-r-m p-b-10">
