offer added in to the product ,

--- a/views/admin/coupon.ejs
+++ b/views/admin/coupon.ejs
@@ -59,13 +59,23 @@
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-white " href="./pages/notifications.html">
+          <a class="nav-link text-white " href="offer">
+            <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
+              <i class="material-icons opacity-10">notifications</i>
+            </div>
+            <span class="nav-link-text ms-1">Offer</span>
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link text-white active " href="banner">
             <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
               <i class="material-icons opacity-10">notifications</i>
             </div>
             <span class="nav-link-text ms-1">Banners</span>
           </a>
         </li>
+      </ul>
+    </div>
   </aside>
     <main class="main-content position-relative max-height-vh-100 h-100 border-radius-lg">
       <!-- Navbar -->
