--- a/views/admin/layouts/adminFooter.ejs
+++ b/views/admin/layouts/adminFooter.ejs
@@ -25,7 +25,9 @@
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
-<!-- <script src="/static/adminAssets/js/validation.js" ></script> -->
+<script src="/static/adminAssets/js/productValidation.js" ></script>
+<script src="/static/adminAssets/js/offerValidation.js" ></script>
+
 
 
 
