--- a/views/users/mainLayout/mainHeader.ejs
+++ b/views/users/mainLayout/mainHeader.ejs
@@ -115,11 +115,11 @@
 
 
 							<li>
-								<a href="#">About</a>
+								<a href="/about">About</a>
 							</li>
 
 							<li>
-								<a href="#">Contact</a>
+								<a href="/contact">Contact</a>
 							</li>
 						</ul>
 					</div>	
