banner user showing completed

--- a/views/admin/coupon.ejs
+++ b/views/admin/coupon.ejs
@@ -153,7 +153,7 @@
                           </td>
                           <td style="padding-block: 42px;">
                             
-                         <button type="button" class="btn btn-secondary btn-sm" data-bs-toggle="modal" data-bs-target="#details" style="color: rgb(255, 255, 255);">
+                         <button type="button" class="btn btn-secondary btn-sm" data-bs-toggle="modal" data-bs-target="#details-<%=coupon._id %>" style="color: rgb(255, 255, 255);">
                               Detail
                         </button>
 
@@ -177,7 +177,7 @@
 
 
                               <!-- ==========modalDeatil -->
-                              <div class="modal fade" id="details" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+                              <div class="modal fade" id="details-<%=coupon._id %>" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
                                 <div class="modal-dialog modal-dialog-centered">
                                   <div class="modal-content">
                                     <div class="modal-header">
