--- a/views/users/home.ejs
+++ b/views/users/home.ejs
@@ -7,23 +7,24 @@
 <section class="section-slide">
 <div class="wrap-slick1 rs2-slick1">
     <div class="slick1">
-        <div class="item-slick1 bg-overlay1" style="background-image: url(/static/userAssets/img/homeShoe-banner1.jpg);" data-thumb="/static/userAssets/img/homeShoe-banner1.jpg" data-caption="Women’s Wear">
+        <div class="item-slick1 bg-overlay1" style="background-image: url('/static/products/banner/<%= banners[0].image %>');" data-thumb="/static/products/banner/<%= banners[0].image %>" data-caption="Women’s Wear">
             <div class="container h-full">
                 <div class="flex-col-c-m h-full p-t-100 p-b-60 respon5">
                     <div class="layer-slick1 animated visible-false" data-appear="fadeInDown" data-delay="0">
                         <span class="ltext-202 txt-center cl0 respon2">
-                            Women Collection 2023
+                           
+                            <%= banners[0].typeHead %>
                         </span>
                     </div>
                         
                     <div class="layer-slick1 animated visible-false" data-appear="fadeInUp" data-delay="800">
                         <h2 class="ltext-104 txt-center cl0 p-t-22 p-b-40 respon1">
-                            New arrivals
+                            <%= banners[0].mainHead %>
                         </h2>
                     </div>
                         
                     <div class="layer-slick1 animated visible-false" data-appear="zoomIn" data-delay="1600">
-                        <a href="/shop" class="flex-c-m stext-101 cl0 size-101 bg1 bor1 hov-btn2 p-lr-15 trans-04">
+                        <a href="<%= banners[0].bannerURL %>" class="flex-c-m stext-101 cl0 size-101 bg1 bor1 hov-btn2 p-lr-15 trans-04">
                             Shop Now
                         </a>
                     </div>
@@ -31,29 +32,30 @@
             </div>
         </div>
 
-        <div class="item-slick1 bg-overlay1" style="background-image: url(/static/userAssets/img/home-banner2.jpg);" data-thumb="/static/userAssets/img/home-banner2.jpg" data-caption="Men’s Wear">
+        <div class="item-slick1 bg-overlay1" style="background-image: url('/static/products/banner/<%= banners[1].image %>');" data-caption="Men’s Wear">
             <div class="container h-full">
                 <div class="flex-col-c-m h-full p-t-100 p-b-60 respon5">
                     <div class="layer-slick1 animated visible-false" data-appear="rollIn" data-delay="0">
                         <span class="ltext-202 txt-center cl0 respon2">
-                            New Season Styles
+                            <%= banners[1].typeHead %>
                         </span>
                     </div>
-                        
+        
                     <div class="layer-slick1 animated visible-false" data-appear="lightSpeedIn" data-delay="800">
                         <h2 class="ltext-104 txt-center cl0 p-t-22 p-b-40 respon1">
-                            Angles
+                            <%= banners[1].mainHead %>
                         </h2>
                     </div>
-                        
+        
                     <div class="layer-slick1 animated visible-false" data-appear="slideInUp" data-delay="1600">
-                        <a href="/shop" class="flex-c-m stext-101 cl0 size-101 bg1 bor1 hov-btn2 p-lr-15 trans-04">
+                        <a href="<%= banners[1].bannerURL %>" class="flex-c-m stext-101 cl0 size-101 bg1 bor1 hov-btn2 p-lr-15 trans-04">
                             Shop Now
                         </a>
                     </div>
                 </div>
             </div>
         </div>
+        
 
         <!-- <div class="item-slick1 bg-overlay1" style="background-image: url(/static/userAssets/images/slide-07.jpg);" data-thumb="/static/userAssets/images/thumb-03.jpg" data-caption="Men’s Wear">
             <div class="container h-full">
